[package]
name = "kubernetes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = { path = "../../config" }
wezterm-dynamic = { path = "../../wezterm-dynamic" }
luahelper = { path = "../../luahelper" }
dirs-next = "2.0.0"
yaml-rust = "0.4.5"
regex = "1.5.6"
cached = "0.34.1"
